Issue #2190: Add template files for layouts and the hero block to achieve a full-bleed hero.

--- a/core/themes/basis/css/component/hero.css
+++ b/core/themes/basis/css/component/hero.css
@@ -18,6 +18,14 @@
   background-size: cover;
 }
 
+.l-top .block-hero {
+  margin-top: -2rem;/* Negative top margin collapses spacing under header */
+}
+
+.container .block-hero {
+  margin-top: 0; /* If hero is in a container don't collapse top spacing */
+}
+
 @media (min-width: 25em) {
   .block-hero {
     padding: 2rem 3rem 3rem;
